@@ -1,5 +1,5 @@
 /*
-    Copyright 2007-2015, Felspar Co Ltd. http://support.felspar.com/
+    Copyright 2007-2017, Felspar Co Ltd. http://support.felspar.com/
     Distributed under the Boost Software License, Version 1.0.
     See accompanying file LICENSE_1_0.txt or copy at
         http://www.boost.org/LICENSE_1_0.txt
@@ -98,6 +98,19 @@ namespace fostlib {
     template<>
     struct FOST_CORE_DECLSPEC coercer< std::wstring, ascii_printable_string > {
         std::wstring coerce( const ascii_printable_string &s );
+    };
+
+    template<>
+    struct coercer<json, ascii_printable_string> {
+        json coerce(const ascii_printable_string &s) {
+            return f5::u8view{s.underlying()};
+        }
+    };
+    template<>
+    struct coercer<f5::u8view, ascii_printable_string> {
+        f5::u8view coerce(const ascii_printable_string &s) {
+            return f5::u8view{s.underlying()};
+        }
     };
 
 
